<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="322dp"
        android:layout_marginBottom="408dp"
        android:foreground="@drawable/shape"
        android:scaleType="centerCrop"
        android:src="@drawable/img_20230316_074049_833"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:roundPercent="0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_middle"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/the_chance"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_middle"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/public_channel"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/text_small"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/info"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/text_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/t_me_thechance101"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/invite_link"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/size_text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:text="@string/notifications"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/text_normal"
        android:text="@string/on"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/size_text_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/text_m"
        android:background="?android:attr/listDivider"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageButton
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back_24"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_qr_code_24"
        android:background="@null"
        tools:layout_editor_absoluteX="334dp"
        tools:layout_editor_absoluteY="381dp"
        />

    <ImageButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_more_vert_24"
        android:background="@null"
        tools:layout_editor_absoluteX="349dp"
        tools:layout_editor_absoluteY="16dp" />


</androidx.constraintlayout.motion.widget.MotionLayout>